# AudioMosaic

./: .coverage  .gitignore  CONTRIBUTING  LICENSE  README.md  TODO  dev-tools.sh  pyproject.toml  requirements.txt  run-formatter.sh  run-test.sh
.github/workflows/: backend.yaml
app/: conftest.py  main.py
app/config/: app.py  database.py
app/core/: config.py  errors.py
app/exceptions/: audio_sample.py  dataset.py  label.py
app/models/: __init__.py  audio_sample.py  audio_sample_label.py  dataset.py  label.py  metadata.py
app/repositories/: __init__.py  audio_sample.py  audio_sample_label.py  base.py  dataset.py  label.py  test_audio_sample.py  test_audio_sample_label.py  test_dataset.py  test_label.py
app/routes/: __init__.py
app/schemas/: __init__.py  audio_sample.py  audio_sample_label.py  dataset.py  generics.py  label.py
app/services/: audio_sample.py  audio_sample_label.py  base.py  dataset.py  label.py  test_audio_sample.py  test_dataset.py  test_label.py
app/tasks/: audio_sample.py
app/tests/: test_audio_sample.py  test_audio_sample_label.py  test_dataset.py  test_label.py  test_main.py
app/tests_e2e/: test_audio_sample.py  test_audio_sample_label.py  test_main.py
app/utils/: guid.py  service_result.py  test_service_result.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  routes.tsx
migrations/: env.py
migrations/versions/: 0336949bd11f_datasets_table_create.py  04f22e40576c_audio_sample_and_label_tables.py  140305975d0d_update_label_structure.py  6c675ca67d42_create_dataset_table.py  (+4 more)
(+19 files in other folders)
