[tool.poetry]
name = "audiomosaic"
version = "0.0.1"
description = "An Audio Dataset Manager for Machine Learning Projects"
authors = ["Tharindu <tharindubathigama@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
pydantic = "^1.10.9"
sqlalchemy = "^1.4.41"
uvicorn = "^0.22.0"
starlette = "^0.27.0"
fastapi-utils = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
