[tool.poetry]
name = "audiomosaic"
version = "0.0.1"
description = "An Audio Dataset Manager for Machine Learning Projects"
authors = ["Tharindu <tharindubathigama@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
pydantic = "^1.10.9"
uvicorn = "^0.22.0"
starlette = "^0.27.0"
httpx = "^0.24.1"
sqlalchemy = "^2.0.16"
python-multipart = "^0.0.6"
audio-metadata = "^0.11.1"
mypy = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
requests = "^2.31.0"
alembic = "^1.11.1"
coverage = "^7.2.7"
pytest-mock = "^3.11.1"
mock = "^5.0.2"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
